# ft_chgnet

./: README.md  convert_gaussian.ipynb  ft_chgnet.ipynb  ft_chgnet_w_tensorboard.ipynb  ft_m3gnet.ipynb  ft_with_cuda_m3gnet.ipynb  log_chatgpt.md  parse_gaussian.ipynb  pyproject.toml  scratch_make_xyz.ipynb  structure_generetor.py
