[tool.poetry]
name = "sample-chgnet"
version = "0.1.0"
description = ""
authors = ["UedaKazuki <kazuki.xx0212xx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chgnet = "^0.3.5"
tensorboard = "^2.16.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
